comment out "layout" tag

--- a/_posts/2022-06-22-kinship.md
+++ b/_posts/2022-06-22-kinship.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+# layout: post
 title: "Kinship Care and Quality of Child Protection Data (audit report)"
 date: 2022-09-21
 permalink: /kinship/
