try adding "categories"

--- a/_posts/2022-06-22-kinship.md
+++ b/_posts/2022-06-22-kinship.md
@@ -1,5 +1,7 @@
 ---
 layout: post
+categories:
+    - Blog
 title: "Kinship Care and Quality of Child Protection Data (audit report)"
 date: 2022-09-21
 permalink: kinship/
