more frontmatter edits

--- a/_posts/2022-06-22-kinship.md
+++ b/_posts/2022-06-22-kinship.md
@@ -1,11 +1,11 @@
 ---
-layout: post
+# layout: post
 categories:
     - Blog
 title: "Kinship Care and Quality of Child Protection Data (audit report)"
-date: 2022-09-21
-permalink: kinship/
-img: https://upload.wikimedia.org/wikipedia/commons/6/6d/Play_park_at_Elie_Holiday_Park_-_geograph.org.uk_-_6112598.jpg
+# date: 2022-09-21
+# permalink: kinship/
+# img: https://upload.wikimedia.org/wikipedia/commons/6/6d/Play_park_at_Elie_Holiday_Park_-_geograph.org.uk_-_6112598.jpg
 published: true
 tags: ["performance audit", "vago", "compliance" ]
 ---
