--- a/_posts/2022-06-22-kinship.md
+++ b/_posts/2022-06-22-kinship.md
@@ -10,9 +10,9 @@ published: true
 tags: ["performance audit", "vago", "compliance" ]
 ---
 
-In a very challenging piece of analytics to work on, we looked at the compliance of the Department of Families, Fairness and Housing (DFFH) with regulations around child wellbeing. For details of the strong conclusions we drew, see [the full report](https://www.audit.vic.gov.au/report/kinship-care). The data work on this audit itself involved running metrics based on the regulations across the department's child protection data. 
+We analysed the Department of Families, Fairness and Housing’s (DFFH) compliance with child wellbeing regulations by running metrics across its child protection data. Our audit also highlighted broader issues with the quality of this data. We found that DFFH lacks adequate controls to ensure high-quality child protection data. Our analysis included checks for outliers, missing values, and logical inconsistencies, but most of our focus was on reviewing DFFH’s data management processes and procedures. For more details, see the [full report](https://www.audit.vic.gov.au/report/kinship-care).
 
-During the course of the Kinship Care audit, we made more general observations on the quality of the data used by the department. We concluded that "DFFH does not have adequate controls to ensure its child protection data is of high quality." For details, see the [full repot](https://www.audit.vic.gov.au/report/quality-child-protection-data). While it is difficult to make an assessment of data quality just be looking at the data itself, we did some analysis of outliers, missing data and data that did not make logical sense. The bulk of the analyis actually focussed on DFFH's processess and procedures.
+Due to the nature of the material, this was a very challenging piece of analysis to work on - one moment you'd be working on some piece of analysis of a table of data, and the next the full gravity of the subject matter would hit you.
 
 [Kinship Care](https://www.audit.vic.gov.au/report/kinship-care) was tabled by the Victorian Auditor-General's Office on 22 June 2022 and [Quality of Child Protection Data](https://www.audit.vic.gov.au/report/quality-child-protection-data) on 21 September 2022.
 
