layout removed, date added back

--- a/_posts/2022-06-22-kinship.md
+++ b/_posts/2022-06-22-kinship.md
@@ -1,9 +1,9 @@
 ---
-layout: post
+# layout: post
 categories:
     - Blog
 title: "Kinship Care and Quality of Child Protection Data (audit reports)"
-# date: 2022-09-21
+date: 2022-09-21
 # permalink: kinship/
 img: https://upload.wikimedia.org/wikipedia/commons/6/6d/Play_park_at_Elie_Holiday_Park_-_geograph.org.uk_-_6112598.jpg
 published: true
@@ -14,5 +14,4 @@ We analysed the Department of Families, Fairness and Housing’s (DFFH) complian
 
 Due to the nature of the material, this was a very challenging piece of analysis to work on - one moment you'd be working on some piece of analysis of a table of data, and the next the full gravity of the subject matter would hit you.
 
-[Kinship Care](https://www.audit.vic.gov.au/report/kinship-care) was tabled by the Victorian Auditor-General's Office on 22 June 2022 and [Quality of Child Protection Data](https://www.audit.vic.gov.au/report/quality-child-protection-data) on 21 September 2022.
-
+*[Kinship Care](https://www.audit.vic.gov.au/report/kinship-care) was tabled by the Victorian Auditor-General's Office on 22 June 2022 and [Quality of Child Protection Data](https://www.audit.vic.gov.au/report/quality-child-protection-data) on 21 September 2022.*
