putting the permalink back in

--- a/_posts/2022-06-22-kinship.md
+++ b/_posts/2022-06-22-kinship.md
@@ -4,7 +4,7 @@ categories:
     - Blog
 title: "Kinship Care and Quality of Child Protection Data (audit reports)"
 date: 2022-09-21
-# permalink: kinship/
+permalink: kinship/
 img: https://upload.wikimedia.org/wikipedia/commons/6/6d/Play_park_at_Elie_Holiday_Park_-_geograph.org.uk_-_6112598.jpg
 published: true
 tags: ["performance audit", "vago", "compliance", "child protection" ]
