--- a/_posts/2024-11-27-fair-pres.md
+++ b/_posts/2024-11-27-fair-pres.md
@@ -1,13 +1,13 @@
 ---
 # layout: post
-title: "Fair Presentation of Service Delivery Performance (dashboard)"
+title: "Fair Presentation of Service Delivery Performance (Power BI report)"
 date: 2024-11-27
 permalink: fair-pres/
 img: https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/Blue_tape_measure.jpg/960px-Blue_tape_measure.jpg
 published: true
-tags: ["performance audit", "vago", "dashboard" ]
+tags: ["performance audit", "vago", "dashboard", "power bi" ]
 ---
 
-This dashboard allows parliament and the public to explore the performance metrics published in Victoria's annual Budget Paper 3 which presents the same information in a less accessible format. (x)
+This dashboard allows parliament and the public to explore the performance metrics published in Victoria's annual Budget Paper 3 which presents the same information in a less accessible format. 
 
-The latest version of [the dashboard](https://www.audit.vic.gov.au/dashboards/fair-presentation-service-delivery-performance-2024) was published by the Victorian Auditor-General's Office on 27 November 2024.
+*The latest version of [the dashboard](https://www.audit.vic.gov.au/dashboards/fair-presentation-service-delivery-performance-2024) was published by the Victorian Auditor-General's Office on 27 November 2024.*
