--- a/_posts/2024-11-27-fair-pres.md
+++ b/_posts/2024-11-27-fair-pres.md
@@ -1,6 +1,6 @@
 ---
 # layout: post
-title: "Fair Presentation of Service Delivery Performance (Power BI report)"
+title: "Fair Presentation of Service Delivery Performance"
 date: 2024-11-27
 permalink: fair-pres/
 img: https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/Blue_tape_measure.jpg/960px-Blue_tape_measure.jpg
@@ -8,6 +8,6 @@ published: true
 tags: ["performance audit", "vago", "dashboard", "power bi" ]
 ---
 
-This dashboard allows parliament and the public to explore the performance metrics published in Victoria's annual Budget Paper 3 which presents the same information in a less accessible format. 
+This Power BI report allows parliament and the public to explore the performance metrics published in Victoria's annual Budget Paper 3 which presents the same information in a less accessible format. 
 
 *The latest version of [the dashboard](https://www.audit.vic.gov.au/dashboards/fair-presentation-service-delivery-performance-2024) was published by the Victorian Auditor-General's Office on 27 November 2024.*
