--- a/_posts/2022-06-22-kinship.md
+++ b/_posts/2022-06-22-kinship.md
@@ -2,12 +2,12 @@
 # layout: post
 # categories:
 #     - Blog
-title: "Kinship Care and Quality of Child Protection Data (audit reports)"
+title: "Kinship Care and Quality of Child Protection Data"
 date: 2022-09-21
 permalink: kinship/
 img: https://upload.wikimedia.org/wikipedia/commons/6/6d/Play_park_at_Elie_Holiday_Park_-_geograph.org.uk_-_6112598.jpg
 published: true
-tags: ["performance audit", "vago", "compliance", "child protection" ]
+tags: ["performance audit", "vago", "compliance", "child protection", "data quality" ]
 ---
 
 We analysed the Department of Families, Fairness and Housing’s (DFFH) compliance with child wellbeing regulations by running metrics across its child protection data. Our audit also highlighted broader issues with the quality of this data. We found that DFFH lacks adequate controls to ensure high-quality child protection data. Our analysis included checks for outliers, missing values, and logical inconsistencies, but most of our focus was on reviewing DFFH’s data management processes and procedures. For more details, see the [Kinship Care](https://www.audit.vic.gov.au/report/kinship-care) report and our follow-up that focused on data quality in child protection in general [Quality of Child Protection Data](https://www.audit.vic.gov.au/report/quality-child-protection-data).
