--- a/_posts/2024-11-27-fair-pres.md
+++ b/_posts/2024-11-27-fair-pres.md
@@ -10,4 +10,4 @@ tags: ["performance audit", "vago", "dashboard", "power bi" ]
 
 This Power BI report allows parliament and the public to explore the performance metrics published in Victoria's annual Budget Paper 3 which presents the same information in a less accessible format. 
 
-*The latest version of [the dashboard](https://www.audit.vic.gov.au/dashboards/fair-presentation-service-delivery-performance-2024) was published by the Victorian Auditor-General's Office on 27 November 2024.*
+*The latest version of [the Power BI report](https://www.audit.vic.gov.au/dashboards/fair-presentation-service-delivery-performance-2024) was published by the Victorian Auditor-General's Office on 27 November 2024.*
