publishing pools and spas

--- a/_posts/2022-06-08-bwc.md
+++ b/_posts/2022-06-08-bwc.md
@@ -2,7 +2,7 @@
 categories:
     - performance audit
     - vago
-title: "Managing Body-Worn Cameras (audit report)"
+title: "Managing Body-Worn Cameras"
 date: 2022-06-08
 permalink: bwc/
 img: https://upload.wikimedia.org/wikipedia/commons/thumb/2/2b/Body_camera.jpg/960px-Body_camera.jpg
@@ -12,6 +12,6 @@ tags: [ "statistics", "compliance", "police", body worn cameras" ]
 
 I was involved in the design (but not execution) of this piece of analytics that involved fuzzy-joining datasets (police activity and camera metadata), statistical analysis and computational optimization. The result was the first calculation of an estimate of compliance with body-worn camera usage regulations.
 
-The compliance rate was a key finding of the audit and was a milestone in demonstrating the utility of data science in performance audit at VAGO
+The compliance rate was a key finding of the audit and was a milestone in demonstrating the utility of data science in performance audit at VAGO.
 
 [The report](https://www.audit.vic.gov.au/report/managing-body-worn-cameras) was tabled by the Victorian Auditor-General's Office on 8 June 2022
