--- a/_posts/2022-06-08-bwc.md
+++ b/_posts/2022-06-08-bwc.md
@@ -1,13 +1,16 @@
 ---
-categories:
-    - performance audit
-    - vago
 title: "Managing Body-Worn Cameras"
 date: 2022-06-08
 permalink: bwc/
-img: https://upload.wikimedia.org/wikipedia/commons/thumb/2/2b/Body_camera.jpg/960px-Body_camera.jpg
 published: true
-tags: [ "statistics", "compliance", "police", body worn cameras" ]
+categories:
+    - performance audit
+    - vago
+tags: 
+    - statistics
+    - compliance
+    - police
+    - body worn cameras
 ---
 
 I was involved in the design (but not execution) of this piece of analytics that involved fuzzy-joining datasets (police activity and camera metadata), statistical analysis and computational optimization. The result was the first calculation of an estimate of compliance with body-worn camera usage regulations.
