--- a/_posts/2022-06-08-bwc.md
+++ b/_posts/2022-06-08-bwc.md
@@ -17,4 +17,4 @@ I was involved in the design (but not execution) of this piece of analytics that
 
 The compliance rate was a key finding of the audit and was a milestone in demonstrating the utility of data science in performance audit at VAGO.
 
-<small>[The report](https://www.audit.vic.gov.au/report/managing-body-worn-cameras) was tabled by the Victorian Auditor-General's Office on 8 June 2022.</small>
+For detailed findings see the [full report](https://www.audit.vic.gov.au/report/managing-body-worn-cameras).
