--- a/_posts/2024-11-27-fair-pres.md
+++ b/_posts/2024-11-27-fair-pres.md
@@ -1,15 +1,16 @@
 ---
-categories:
-    - dashboard
-    - vago
 title: "Fair Presentation of Service Delivery Performance"
 date: 2024-11-27
 permalink: fair-pres/
-img: https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/Blue_tape_measure.jpg/960px-Blue_tape_measure.jpg
 published: true
-tags: [ "service delivery", "transparency" ]
+categories:
+    - dashboard
+    - vago
+tags:
+    - service delivery
+    - transparency
 ---
 
 This Power BI report allows parliament and the public to explore the performance metrics published in Victoria's annual Budget Paper 3 which presents the same information in a less accessible format. 
 
-*The latest version of [the Power BI report](https://www.audit.vic.gov.au/dashboards/fair-presentation-service-delivery-performance-2024) was published by the Victorian Auditor-General's Office on 27 November 2024.*
+The latest version of [the Power BI report](https://www.audit.vic.gov.au/dashboards/fair-presentation-service-delivery-performance-2024) was published by the Victorian Auditor-General's Office on 27 November 2024.
