adding header image to kinship

--- a/_posts/2022-06-22-kinship.md
+++ b/_posts/2022-06-22-kinship.md
@@ -1,6 +1,7 @@
 ---
 title: "Kinship Care and Quality of Child Protection Data"
 date: 2022-09-21
+header.image: https://upload.wikimedia.org/wikipedia/commons/6/6d/Play_park_at_Elie_Holiday_Park_-_geograph.org.uk_-_6112598.jpg
 permalink: kinship/
 published: true
 categories:
