--- a/_posts/2022-06-22-kinship.md
+++ b/_posts/2022-06-22-kinship.md
@@ -4,7 +4,7 @@ date: 2022-09-21
 permalink: kinship/
 published: true
 categories:
-    - performance audit report
+    - performance audit
     - vago
 tags:
     - compliance
