--- a/_posts/2021-03-18-gambling.md
+++ b/_posts/2021-03-18-gambling.md
@@ -1,5 +1,5 @@
 ---
-title: "Reducing the Harm Caused by Gambling (audit report)"
+title: "Reducing the Harm Caused by Gambling"
 date: 2021-03-18
 permalink: gambling/
 published: true
