--- a/_posts/2020-10-15-trams.md
+++ b/_posts/2020-10-15-trams.md
@@ -5,6 +5,7 @@ permalink: trams/
 published: true
 categories:
     - performance audit
+    - dashboard
     - vago
 tags: [ "trams", "dashboard", "geospatial", "transport", "transparency" ]
 ---
