--- a/_posts/2018-08-06-ph-data.md
+++ b/_posts/2018-08-06-ph-data.md
@@ -8,7 +8,7 @@ catagories:
 tags: [ "python", "gist", "data.gov.au", "public holiday data", "australia", ]
 ---
 
-**data.gov.au** maintains data on [Australian Public holidays](https://data.gov.au/dataset/australian-holidays-machine-readable-dataset), but needs some massaging to get it into usable format. I wrote a cheap-and-nasty Python script for downloading and shaping the data into a more usable form. [Click to view code](https://gist.github.com/smcateer/8930c8f4fcb96830e5e51345352df776).
+[data.gov.au](https://data.gov.au) maintains data on [Australian Public holidays](https://data.gov.au/dataset/australian-holidays-machine-readable-dataset), but needs some massaging to get it into usable format. I wrote a cheap-and-nasty Python script for downloading and shaping the data into a more usable form. [Click to view code](https://gist.github.com/smcateer/8930c8f4fcb96830e5e51345352df776).
 
 The output is a single Pandas DataFrame in the following format:
 
