adjust tumblr post

--- a/_posts/2018-08-01-tumblr.md
+++ b/_posts/2018-08-01-tumblr.md
@@ -6,7 +6,7 @@ published: true
 categories:
   - link
 tags: ["tumblr", ]
-link: "http://mathsphysicsscietc.tumblr.com/"
+link: "https://www.tumblr.com/blog/mathsphysicsscietc-blog"
 ---
 
-One day I will make the effort of moving these posts over here ... in the meantime check it out over there: [Tumblr](http://mathsphysicsscietc.tumblr.com/)
+I was using Tumblr to post some of my more mathematical and physics-related content, but I have since moved that content to this blog. You can still check out the old posts over there.
