added arterial roads, modified tli

--- a/_posts/2024-06-19-tli.md
+++ b/_posts/2024-06-19-tli.md
@@ -16,4 +16,6 @@ The TLI provides small-group tutoring (2–5 students) to support those whose le
 
 They then used regression-based modelling and baseline-matched comparisons to control for prior achievement, thereby mitigating bias from selecting weaker students into tutoring. Specifically, by using more sophisticated methods than previous analysis, the team addressed *regression to the mean* and *Simpson's paradox* effects that can otherwise distort simple pre-post comparisons.
 
+A highlight of this work was the engagement with the auditees to explain the statistical methods and findings. The results were contentious and our data analysts' ability to respectfully defend the methodology and findings was critical to the audit's success.
+
 For full details see the [full report](https://www.audit.vic.gov.au/report/effectiveness-tutor-learning-initiative).
