added access to emergency healthcare

--- a/_posts/2099-01-01-template.md
+++ b/_posts/2099-01-01-template.md
@@ -1,11 +1,8 @@
 ---
-# REM layout: post
-title: "TITLE (audit report)" # DEL ()
+title: "TITLE"
 date: 2099-01-01
-permalink: xxxx/ # DEL leading /
-# REM img: xxxx 
+permalink: xxxx/
 published: false # SET true when ready
-# ADD
 categories:
     - TYPE 
     - ORG 
@@ -14,4 +11,4 @@ tags: ["performance audit", "vago", "xxxx" ]
 
 xxxxx
 
-(INCLUDE LINK SOMEWHERE) [The report](xxxx) was tabled by the Victorian Auditor-General's Office on dd MMMM YYYY.
+For details see [the full report](xxxx).
