--- a/_posts/2025-05-14-dbi.md
+++ b/_posts/2025-05-14-dbi.md
@@ -1,16 +1,16 @@
 ---
-title: "Domestic Building Oversight Part 2: Dispute Resolution" 
-date: 2099-01-01
+title: "Domestic Building Insurance" 
+date: 2025-05-14
 permalink: dbo/ 
 published: true
 categories:
     - performance audit
     - vago
-tags: ["building regulation", "process flow", "descriptive analysis" ]
+tags: ["building regulation", "domestic building insurance", "process flow", "descriptive analysis" ]
 ---
 
 A data scientist on my team contributed to this report by carrying out descriptive analysis and process flow mapping of the dispute resolution processes. An important part of her work involved carrying out "ride-alongs" with staff from the auditee which provided context and allowed her to understand elements of the process that were not documented and did not leave a data trail.
 
 Another highlight was the use of clean, simple data visualisations to communicate key results of the analysis - it's easy to underestimate the skill and effort that goes into making effective (simlple-appearing) visualizations. 
 
-For full details, see the [the report](https://www.audit.vic.gov.au/report/domestic-building-oversight-part-2-dispute-resolution).
+For full details, see the [the report](https://www.audit.vic.gov.au/report/domestic-building-insurance).
