added critical data analysis

--- a/_posts/2099-01-01-template.md
+++ b/_posts/2099-01-01-template.md
@@ -1,12 +1,12 @@
 ---
-title: "TITLE"
-date: 2099-01-01
-permalink: xxxx/
+title: 
+date: 
+permalink: 
 published: false # SET true when ready
 categories:
-    - TYPE 
-    - ORG 
-tags: ["performance audit", "vago", "xxxx" ]
+    - 
+tags:
+    - 
 ---
 
 xxxxx
