--- a/_posts/2099-01-01-template.md
+++ b/_posts/2099-01-01-template.md
@@ -1,12 +1,12 @@
 ---
-title: 
-date: 
-permalink: 
+title: "xxx"
+date: 2099-01-01
+permalink: xxx/
 published: false # SET true when ready
 categories:
-    - 
+    - x
 tags:
-    - 
+    - x
 ---
 
 xxxxx
